--- a/arch/arm/configs/omap5uevm_defconfig
+++ b/arch/arm/configs/omap5uevm_defconfig
@@ -514,7 +514,7 @@ CONFIG_ARM_ERRATA_798181=y
 #
 CONFIG_HAVE_SMP=y
 CONFIG_SMP=y
-CONFIG_SMP_ON_UP=y
+# CONFIG_SMP_ON_UP is not set
 CONFIG_ARM_CPU_TOPOLOGY=y
 # CONFIG_SCHED_MC is not set
 # CONFIG_SCHED_SMT is not set
@@ -695,8 +695,7 @@ CONFIG_COREDUMP=y
 CONFIG_WAKELOCK=y
 # CONFIG_HIBERNATION is not set
 CONFIG_PM=y
-CONFIG_PM_DEBUG=y
-# CONFIG_PM_ADVANCED_DEBUG is not set
+# CONFIG_PM_DEBUG is not set
 # CONFIG_APM_EMULATION is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
@@ -1147,14 +1146,14 @@ CONFIG_NET_FLOW_LIMIT=y
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
-CONFIG_BT=m
+CONFIG_BT=y
 CONFIG_BT_BREDR=y
-CONFIG_BT_RFCOMM=m
+CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
-CONFIG_BT_BNEP=m
+CONFIG_BT_BNEP=y
 CONFIG_BT_BNEP_MC_FILTER=y
 CONFIG_BT_BNEP_PROTO_FILTER=y
-CONFIG_BT_HIDP=m
+CONFIG_BT_HIDP=y
 CONFIG_BT_HS=y
 CONFIG_BT_LE=y
 # CONFIG_BT_SELFTEST is not set
@@ -1164,8 +1163,8 @@ CONFIG_BT_DEBUGFS=y
 # Bluetooth device drivers
 #
 # CONFIG_BT_HCIBTUSB is not set
-CONFIG_BT_HCIBTSDIO=m
-CONFIG_BT_HCIUART=m
+CONFIG_BT_HCIBTSDIO=y
+CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_H4=y
 CONFIG_BT_HCIUART_BCSP=y
 # CONFIG_BT_HCIUART_ATH3K is not set
@@ -1177,7 +1176,7 @@ CONFIG_BT_HCIUART_3WIRE=y
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
 # CONFIG_BT_HCIBFUSB is not set
-CONFIG_BT_HCIVHCI=m
+CONFIG_BT_HCIVHCI=y
 # CONFIG_BT_MRVL is not set
 CONFIG_BT_WILINK=m
 # CONFIG_AF_RXRPC is not set
@@ -1217,29 +1216,7 @@ CONFIG_RFKILL_GPIO=y
 # CONFIG_NET_9P is not set
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
-CONFIG_NFC=m
-CONFIG_NFC_DIGITAL=m
-CONFIG_NFC_NCI=m
-# CONFIG_NFC_NCI_SPI is not set
-CONFIG_NFC_NCI_UART=m
-CONFIG_NFC_HCI=m
-# CONFIG_NFC_SHDLC is not set
-
-#
-# Near Field Communication (NFC) devices
-#
-# CONFIG_NFC_PN533 is not set
-CONFIG_NFC_WILINK=m
-# CONFIG_NFC_TRF7970A is not set
-# CONFIG_NFC_SIM is not set
-# CONFIG_NFC_PORT100 is not set
-# CONFIG_NFC_FDP is not set
-# CONFIG_NFC_MRVL_USB is not set
-# CONFIG_NFC_MRVL_UART is not set
-# CONFIG_NFC_ST21NFCA is not set
-# CONFIG_NFC_ST_NCI is not set
-# CONFIG_NFC_NXP_NCI is not set
-# CONFIG_NFC_S3FWRN5_I2C is not set
+# CONFIG_NFC is not set
 # CONFIG_LWTUNNEL is not set
 CONFIG_HAVE_BPF_JIT=y
 
@@ -1368,7 +1345,7 @@ CONFIG_EEPROM_AT24=y
 # CONFIG_EEPROM_AT25 is not set
 # CONFIG_EEPROM_LEGACY is not set
 # CONFIG_EEPROM_MAX6875 is not set
-CONFIG_EEPROM_93CX6=y
+# CONFIG_EEPROM_93CX6 is not set
 # CONFIG_EEPROM_93XX46 is not set
 
 #
@@ -1811,7 +1788,6 @@ CONFIG_TOUCHSCREEN_GOODIX=m
 CONFIG_TOUCHSCREEN_EDT_FT5X06=m
 # CONFIG_TOUCHSCREEN_TOUCHRIGHT is not set
 # CONFIG_TOUCHSCREEN_TOUCHWIN is not set
-CONFIG_TOUCHSCREEN_TI_AM335X_TSC=m
 CONFIG_TOUCHSCREEN_PIXCIR=m
 # CONFIG_TOUCHSCREEN_WDT87XX_I2C is not set
 # CONFIG_TOUCHSCREEN_USB_COMPOSITE is not set
@@ -1845,7 +1821,6 @@ CONFIG_INPUT_KEYCHORD=y
 # CONFIG_INPUT_YEALINK is not set
 # CONFIG_INPUT_CM109 is not set
 # CONFIG_INPUT_REGULATOR_HAPTIC is not set
-# CONFIG_INPUT_TPS65218_PWRBUTTON is not set
 # CONFIG_INPUT_TWL6040_VIBRA is not set
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
@@ -2174,17 +2149,16 @@ CONFIG_GPIO_SYSCON=y
 # CONFIG_GPIO_ADNP is not set
 # CONFIG_GPIO_MAX7300 is not set
 # CONFIG_GPIO_MAX732X is not set
-CONFIG_GPIO_PCA953X=m
-CONFIG_GPIO_PCF857X=y
+CONFIG_GPIO_PCA953X=y
+# CONFIG_GPIO_PCA953X_IRQ is not set
+# CONFIG_GPIO_PCF857X is not set
 # CONFIG_GPIO_SX150X is not set
-CONFIG_GPIO_TPIC2810=m
+# CONFIG_GPIO_TPIC2810 is not set
 
 #
 # MFD GPIO expanders
 #
 CONFIG_GPIO_PALMAS=y
-# CONFIG_GPIO_TPS6586X is not set
-CONFIG_GPIO_TPS65910=y
 # CONFIG_GPIO_TWL6040 is not set
 
 #
@@ -2198,12 +2172,12 @@ CONFIG_GPIO_PISOSR=m
 #
 # SPI or I2C GPIO expanders
 #
-CONFIG_GPIO_MCP23S08=m
+# CONFIG_GPIO_MCP23S08 is not set
 
 #
 # USB GPIO expanders
 #
-CONFIG_W1=m
+CONFIG_W1=y
 
 #
 # 1-wire Bus Masters
@@ -2213,7 +2187,7 @@ CONFIG_W1=m
 # CONFIG_W1_MASTER_MXC is not set
 # CONFIG_W1_MASTER_DS1WM is not set
 # CONFIG_W1_MASTER_GPIO is not set
-CONFIG_HDQ_MASTER_OMAP=m
+CONFIG_HDQ_MASTER_OMAP=y
 
 #
 # 1-wire Slaves
@@ -2239,10 +2213,10 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_DS2780 is not set
 # CONFIG_BATTERY_DS2781 is not set
 # CONFIG_BATTERY_DS2782 is not set
-CONFIG_BATTERY_SBS=y
+# CONFIG_BATTERY_SBS is not set
 # CONFIG_BATTERY_BQ27XXX is not set
-CONFIG_BATTERY_MAX17040=m
-CONFIG_BATTERY_MAX17042=m
+# CONFIG_BATTERY_MAX17040 is not set
+# CONFIG_BATTERY_MAX17042 is not set
 # CONFIG_CHARGER_ISP1704 is not set
 # CONFIG_CHARGER_MAX8903 is not set
 # CONFIG_CHARGER_LP8727 is not set
@@ -2255,8 +2229,6 @@ CONFIG_BATTERY_MAX17042=m
 # CONFIG_CHARGER_BQ24735 is not set
 # CONFIG_CHARGER_BQ25890 is not set
 # CONFIG_CHARGER_SMB347 is not set
-CONFIG_CHARGER_TPS65090=y
-# CONFIG_CHARGER_TPS65217 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
 # CONFIG_BATTERY_GOLDFISH is not set
 # CONFIG_CHARGER_RT9455 is not set
@@ -2350,7 +2322,7 @@ CONFIG_SENSORS_GPIO_FAN=y
 # CONFIG_SENSORS_LM95245 is not set
 # CONFIG_SENSORS_PC87360 is not set
 # CONFIG_SENSORS_PC87427 is not set
-CONFIG_SENSORS_NTC_THERMISTOR=m
+# CONFIG_SENSORS_NTC_THERMISTOR is not set
 # CONFIG_SENSORS_NCT6683 is not set
 # CONFIG_SENSORS_NCT6775 is not set
 # CONFIG_SENSORS_NCT7802 is not set
@@ -2427,8 +2399,8 @@ CONFIG_TI_SOC_THERMAL=y
 CONFIG_TI_THERMAL=y
 # CONFIG_OMAP3_THERMAL is not set
 # CONFIG_OMAP4_THERMAL is not set
-# CONFIG_OMAP5_THERMAL is not set
-CONFIG_DRA752_THERMAL=y
+CONFIG_OMAP5_THERMAL=y
+# CONFIG_DRA752_THERMAL is not set
 CONFIG_TI_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=0
 
 #
@@ -2533,7 +2505,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_ABX500_CORE is not set
 # CONFIG_MFD_STMPE is not set
 CONFIG_MFD_SYSCON=y
-CONFIG_MFD_TI_AM335X_TSCADC=m
+# CONFIG_MFD_TI_AM335X_TSCADC is not set
 # CONFIG_MFD_LP3943 is not set
 # CONFIG_MFD_LP8788 is not set
 CONFIG_MFD_OMAP_USB_HOST=y
@@ -2542,13 +2514,13 @@ CONFIG_MFD_PALMAS=y
 # CONFIG_TPS65010 is not set
 # CONFIG_TPS6507X is not set
 # CONFIG_MFD_TPS65086 is not set
-CONFIG_MFD_TPS65090=y
-CONFIG_MFD_TPS65217=y
-CONFIG_MFD_TI_LP873X=y
-CONFIG_MFD_TI_LP87565=y
-CONFIG_MFD_TPS65218=y
-CONFIG_MFD_TPS6586X=y
-CONFIG_MFD_TPS65910=y
+# CONFIG_MFD_TPS65090 is not set
+# CONFIG_MFD_TPS65217 is not set
+# CONFIG_MFD_TI_LP873X is not set
+# CONFIG_MFD_TI_LP87565 is not set
+# CONFIG_MFD_TPS65218 is not set
+# CONFIG_MFD_TPS6586X is not set
+# CONFIG_MFD_TPS65910 is not set
 # CONFIG_MFD_TPS65912_I2C is not set
 # CONFIG_MFD_TPS65912_SPI is not set
 # CONFIG_MFD_TPS80031 is not set
@@ -2586,9 +2558,7 @@ CONFIG_REGULATOR_GPIO=y
 # CONFIG_REGULATOR_LP3971 is not set
 # CONFIG_REGULATOR_LP3972 is not set
 # CONFIG_REGULATOR_LP872X is not set
-# CONFIG_REGULATOR_LP873X is not set
 # CONFIG_REGULATOR_LP8755 is not set
-# CONFIG_REGULATOR_LP87565 is not set
 # CONFIG_REGULATOR_LTC3589 is not set
 # CONFIG_REGULATOR_MAX1586 is not set
 # CONFIG_REGULATOR_MAX8649 is not set
@@ -2607,12 +2577,7 @@ CONFIG_REGULATOR_TI_ABB=y
 # CONFIG_REGULATOR_TPS62360 is not set
 # CONFIG_REGULATOR_TPS65023 is not set
 # CONFIG_REGULATOR_TPS6507X is not set
-# CONFIG_REGULATOR_TPS65090 is not set
-# CONFIG_REGULATOR_TPS65217 is not set
-# CONFIG_REGULATOR_TPS65218 is not set
 # CONFIG_REGULATOR_TPS6524X is not set
-# CONFIG_REGULATOR_TPS6586X is not set
-# CONFIG_REGULATOR_TPS65910 is not set
 CONFIG_MEDIA_SUPPORT=y
 
 #
@@ -2623,7 +2588,7 @@ CONFIG_MEDIA_CAMERA_SUPPORT=y
 # CONFIG_MEDIA_DIGITAL_TV_SUPPORT is not set
 # CONFIG_MEDIA_RADIO_SUPPORT is not set
 # CONFIG_MEDIA_SDR_SUPPORT is not set
-# CONFIG_MEDIA_RC_SUPPORT is not set
+CONFIG_MEDIA_RC_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_DEV=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
@@ -2641,6 +2606,20 @@ CONFIG_VIDEOBUF2_VMALLOC=m
 #
 # Media drivers
 #
+CONFIG_RC_CORE=y
+CONFIG_RC_MAP=y
+CONFIG_RC_DECODERS=y
+# CONFIG_LIRC is not set
+# CONFIG_IR_NEC_DECODER is not set
+# CONFIG_IR_RC5_DECODER is not set
+# CONFIG_IR_RC6_DECODER is not set
+# CONFIG_IR_JVC_DECODER is not set
+# CONFIG_IR_SONY_DECODER is not set
+# CONFIG_IR_SANYO_DECODER is not set
+# CONFIG_IR_SHARP_DECODER is not set
+# CONFIG_IR_MCE_KBD_DECODER is not set
+# CONFIG_IR_XMP_DECODER is not set
+# CONFIG_RC_DEVICES is not set
 CONFIG_MEDIA_USB_SUPPORT=y
 
 #
@@ -2753,6 +2732,7 @@ CONFIG_V4L_MEM2MEM_DRIVERS=y
 # Media ancillary drivers (tuners, sensors, i2c, frontends)
 #
 # CONFIG_MEDIA_SUBDRV_AUTOSELECT is not set
+CONFIG_VIDEO_IR_I2C=y
 
 #
 # Encoders, decoders, sensors and other helper chips
@@ -2784,7 +2764,7 @@ CONFIG_V4L_MEM2MEM_DRIVERS=y
 #
 # Video decoders
 #
-CONFIG_VIDEO_ADV7180=m
+# CONFIG_VIDEO_ADV7180 is not set
 # CONFIG_VIDEO_ADV7183 is not set
 # CONFIG_VIDEO_ADV7604 is not set
 # CONFIG_VIDEO_ADV7842 is not set
@@ -2792,13 +2772,13 @@ CONFIG_VIDEO_ADV7180=m
 # CONFIG_VIDEO_BT856 is not set
 # CONFIG_VIDEO_BT866 is not set
 # CONFIG_VIDEO_KS0127 is not set
-CONFIG_VIDEO_ML86V7667=m
+# CONFIG_VIDEO_ML86V7667 is not set
 # CONFIG_VIDEO_SAA7110 is not set
 # CONFIG_VIDEO_SAA711X is not set
 # CONFIG_VIDEO_TC358743 is not set
 # CONFIG_VIDEO_TVP514X is not set
 # CONFIG_VIDEO_TVP5150 is not set
-CONFIG_VIDEO_TVP5158=m
+# CONFIG_VIDEO_TVP5158 is not set
 # CONFIG_VIDEO_TVP7002 is not set
 # CONFIG_VIDEO_TW2804 is not set
 # CONFIG_VIDEO_TW9903 is not set
@@ -2828,19 +2808,19 @@ CONFIG_VIDEO_TVP5158=m
 #
 # Camera sensor devices
 #
-CONFIG_VIDEO_OV2659=m
+# CONFIG_VIDEO_OV2659 is not set
 # CONFIG_VIDEO_OV7640 is not set
 # CONFIG_VIDEO_OV7670 is not set
 # CONFIG_VIDEO_OV9650 is not set
-CONFIG_VIDEO_OV1063X=m
-CONFIG_VIDEO_OV490=m
+# CONFIG_VIDEO_OV1063X is not set
+# CONFIG_VIDEO_OV490 is not set
 # CONFIG_VIDEO_VS6624 is not set
 # CONFIG_VIDEO_MT9M032 is not set
 # CONFIG_VIDEO_MT9P031 is not set
 # CONFIG_VIDEO_MT9T001 is not set
 # CONFIG_VIDEO_MT9V011 is not set
 # CONFIG_VIDEO_MT9V032 is not set
-CONFIG_VIDEO_MT9T11X=m
+# CONFIG_VIDEO_MT9T11X is not set
 # CONFIG_VIDEO_SR030PC30 is not set
 # CONFIG_VIDEO_NOON010PC30 is not set
 # CONFIG_VIDEO_M5MOLS is not set
@@ -3034,19 +3014,18 @@ CONFIG_FB_SSD1307=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
-CONFIG_BACKLIGHT_GENERIC=y
-CONFIG_BACKLIGHT_PWM=m
+# CONFIG_BACKLIGHT_GENERIC is not set
+CONFIG_BACKLIGHT_PWM=y
 # CONFIG_BACKLIGHT_PM8941_WLED is not set
 # CONFIG_BACKLIGHT_ADP8860 is not set
 # CONFIG_BACKLIGHT_ADP8870 is not set
 # CONFIG_BACKLIGHT_LM3630A is not set
 # CONFIG_BACKLIGHT_LM3639 is not set
 # CONFIG_BACKLIGHT_LP855X is not set
-# CONFIG_BACKLIGHT_TPS65217 is not set
-CONFIG_BACKLIGHT_GPIO=m
+CONFIG_BACKLIGHT_GPIO=y
 # CONFIG_BACKLIGHT_LV5207LP is not set
 # CONFIG_BACKLIGHT_BD6107 is not set
-CONFIG_BACKLIGHT_LED=m
+CONFIG_BACKLIGHT_LED=y
 # CONFIG_ADF is not set
 
 #
@@ -3298,6 +3277,7 @@ CONFIG_HID_PICOLCD=y
 # CONFIG_HID_PICOLCD_FB is not set
 # CONFIG_HID_PICOLCD_BACKLIGHT is not set
 # CONFIG_HID_PICOLCD_LEDS is not set
+# CONFIG_HID_PICOLCD_CIR is not set
 # CONFIG_HID_PLANTRONICS is not set
 CONFIG_HID_PRIMAX=y
 CONFIG_HID_ROCCAT=y
@@ -3544,14 +3524,14 @@ CONFIG_USB_PHY=y
 # CONFIG_USB_OTG_WAKELOCK is not set
 # CONFIG_KEYSTONE_USB_PHY is not set
 CONFIG_NOP_USB_XCEIV=y
-CONFIG_AM335X_CONTROL_USB=y
-CONFIG_AM335X_PHY_USB=y
+# CONFIG_AM335X_PHY_USB is not set
 CONFIG_USB_GPIO_VBUS=y
-CONFIG_USB_ISP1301=y
+# CONFIG_USB_ISP1301 is not set
 # CONFIG_USB_MSM_OTG is not set
 # CONFIG_USB_QCOM_8X16_PHY is not set
 # CONFIG_USB_RCAR_PHY is not set
-# CONFIG_USB_ULPI is not set
+CONFIG_USB_ULPI=y
+CONFIG_USB_ULPI_VIEWPORT=y
 # CONFIG_DUAL_ROLE_USB_INTF is not set
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
@@ -3736,7 +3716,7 @@ CONFIG_RTC_INTF_DEV=y
 #
 # CONFIG_RTC_DRV_ABB5ZES3 is not set
 # CONFIG_RTC_DRV_ABX80X is not set
-CONFIG_RTC_DRV_DS1307=m
+# CONFIG_RTC_DRV_DS1307 is not set
 # CONFIG_RTC_DRV_DS1374 is not set
 # CONFIG_RTC_DRV_DS1672 is not set
 # CONFIG_RTC_DRV_DS3232 is not set
@@ -3747,7 +3727,7 @@ CONFIG_RTC_DRV_DS1307=m
 # CONFIG_RTC_DRV_ISL12022 is not set
 # CONFIG_RTC_DRV_ISL12057 is not set
 # CONFIG_RTC_DRV_X1205 is not set
-CONFIG_RTC_DRV_PALMAS=m
+CONFIG_RTC_DRV_PALMAS=y
 # CONFIG_RTC_DRV_PCF2127 is not set
 # CONFIG_RTC_DRV_PCF8523 is not set
 # CONFIG_RTC_DRV_PCF8563 is not set
@@ -3755,8 +3735,6 @@ CONFIG_RTC_DRV_PALMAS=m
 # CONFIG_RTC_DRV_PCF8583 is not set
 # CONFIG_RTC_DRV_M41T80 is not set
 # CONFIG_RTC_DRV_BQ32K is not set
-CONFIG_RTC_DRV_TPS6586X=m
-CONFIG_RTC_DRV_TPS65910=m
 # CONFIG_RTC_DRV_S35390A is not set
 # CONFIG_RTC_DRV_FM3130 is not set
 # CONFIG_RTC_DRV_RX8581 is not set
@@ -3805,7 +3783,7 @@ CONFIG_RTC_DRV_TPS65910=m
 #
 # on-CPU RTC drivers
 #
-CONFIG_RTC_DRV_OMAP=m
+# CONFIG_RTC_DRV_OMAP is not set
 # CONFIG_RTC_DRV_GEMINI is not set
 # CONFIG_RTC_DRV_LPC24XX is not set
 # CONFIG_RTC_DRV_SNVS is not set
@@ -3935,8 +3913,8 @@ CONFIG_STAGING=y
 #
 # Light sensors
 #
-CONFIG_SENSORS_ISL29018=y
-CONFIG_SENSORS_ISL29028=y
+# CONFIG_SENSORS_ISL29018 is not set
+# CONFIG_SENSORS_ISL29028 is not set
 # CONFIG_TSL2583 is not set
 # CONFIG_TSL2x7x is not set
 
@@ -4117,7 +4095,7 @@ CONFIG_OMAP_GPMC=y
 CONFIG_IIO=y
 CONFIG_IIO_BUFFER=y
 # CONFIG_IIO_BUFFER_CB is not set
-CONFIG_IIO_KFIFO_BUF=m
+CONFIG_IIO_KFIFO_BUF=y
 # CONFIG_IIO_TRIGGER is not set
 
 #
@@ -4157,7 +4135,6 @@ CONFIG_IIO_KFIFO_BUF=m
 # CONFIG_ROCKCHIP_SARADC is not set
 # CONFIG_TI_ADC081C is not set
 # CONFIG_TI_ADC128S052 is not set
-# CONFIG_TI_AM335X_ADC is not set
 # CONFIG_VF610_ADC is not set
 # CONFIG_XILINX_XADC is not set
 
@@ -4886,7 +4863,7 @@ CONFIG_CRYPTO_ECB=y
 #
 # Hash modes
 #
-CONFIG_CRYPTO_CMAC=m
+CONFIG_CRYPTO_CMAC=y
 CONFIG_CRYPTO_HMAC=y
 # CONFIG_CRYPTO_XCBC is not set
 # CONFIG_CRYPTO_VMAC is not set
